--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -983,6 +983,7 @@
 {% endblock %}
 
 {% block content %}
+<div data-page>
 
 <!-- HERO (images only) -->
 <div class="edge-bleed">
@@ -1667,4 +1668,6 @@
     });
   })();
 </script>
+</div>
+
 {% endblock %}
