--- a/app/templates/items.html
+++ b/app/templates/items.html
@@ -159,6 +159,7 @@ h1,h2,h3,h4,h5,h6,.section-title{color:#0f172a}
 {% endblock %}
 
 {% block content %}
+<div data-page>
 
 <section class="container" style="max-width:1200px;margin:auto">
 
@@ -419,4 +420,5 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 
 </script>
+</div>
 {% endblock %}
