--- a/app/templates/booking_flow.html
+++ b/app/templates/booking_flow.html
@@ -807,7 +807,7 @@
     <!-- TEXT INFO -->
     <div>
       <div style="font-weight:700;font-size:1rem;">
-        {{ renter_fullname }}
+        {{ renter_full_name or renter_fullname }}
       </div>
 
       {% if renter_phone %}
